make temp matrix file when calling poa